brain/sources/prod-metadata/objects/Interview_Participant__c/Interview_Participant__c.object-meta.xml
<CustomObject>
    <label>Interview Participant</label>
    <nameField>
        <label>Interview Participant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>