brain/sources/prod-metadata/objects/Interview_Participant__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipName>Interview_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>