brain/sources/prod-metadata/objects/Interview_Participant__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipName>Interview_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>