brain/sources/prod-metadata/objects/Interview_Participant__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Interviewer/Recruiter</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>