brain/sources/prod-metadata/objects/Interview_Participant__c/fields/Joined_At__c.field-meta.xml
<CustomField>
    <fullName>Joined_At__c</fullName>
    <label>Joined At</label>
    <type>DateTime</type>
</CustomField>