brain/sources/prod-metadata/objects/Interview_Participant__c/fields/Left_At__c.field-meta.xml
<CustomField>
    <fullName>Left_At__c</fullName>
    <label>Left At</label>
    <type>DateTime</type>
</CustomField>