brain/sources/prod-metadata/objects/Interview_Participant__c/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <label>Participant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Client Interviewer</fullName>
            </value>
            <value>
                <fullName>Client Recruiter</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Internal Observer</fullName>
            </value>
            <value>
                <fullName>Internal Support</fullName>
            </value>
            <value>
                <fullName>Internal Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>