brain/sources/prod-metadata/objects/Interview_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interview_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>